fix dark mode colors on 404 Page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -539,6 +539,9 @@ footer a:hover {
     .gizlilik-wrapper a {
         color: var(--text-dark);
     }
+    .error-main {
+        color: var(--text-dark);
+    }
 }
 
 
